--- a/MyApp001_linear_layout/app/src/main/res/values/colors.xml
+++ b/MyApp001_linear_layout/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="myPrimary01">#673AB7</color>
     <color name="myPrimary02">#FFC107</color>
     <color name="myPrimary03">#3F51B5</color>
+    <color name="myPrimary04">#B6B6B6</color>
 </resources>
