--- a/MyApp001_linear_layout/app/src/main/res/values/colors.xml
+++ b/MyApp001_linear_layout/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="myPrimary01">#673AB7</color>
-    <color name="myPrimary02">#FFC107</color>
+    <color name="myPrimary02">#DE8200</color>
     <color name="myPrimary03">#3F51B5</color>
     <color name="myPrimary04">#B6B6B6</color>
 </resources>
