--- a/MyApplication002/app/src/main/res/drawable/btn_style.xml
+++ b/MyApplication002/app/src/main/res/drawable/btn_style.xml
@@ -4,4 +4,5 @@
             android:width="2dp"
             android:color="#fff" />
         <corners android:radius="14dp" />
+        <solid android:backgroundTint="@color/purple"/>
     </shape>
