--- a/MyApplication002/app/src/main/res/drawable/tw_fail.xml
+++ b/MyApplication002/app/src/main/res/drawable/tw_fail.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#fff" />
+        android:color="@color/red" />
     <corners android:radius="14dp"/>
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/red"/>
 </shape>
