--- a/MyApplication002/app/src/main/res/values/colors.xml
+++ b/MyApplication002/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="myPrimary01">#FFFFFFFF</color>
-    <color name="purple">#673AB7</color>
+    <color name="white">#FFFFFF</color>
+    <color name="purple">#872FFA</color>
+    <color name="green">#329D00</color>
+    <color name="red">#A80000</color>
 </resources>
