--- a/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
+++ b/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="20sp"
     tools:context=".MainActivity">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/twHeading"
+        android:text="Jaké smoothie si chcete objednat?"
+        android:textSize="22sp"
+        android:textAlignment="center"
+        android:layout_marginBottom="16sp"/>
+
+    <RadioGroup
+        android:id="@+id/rgSmoothies"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="16sp">
+
+        <RadioButton
+            android:id="@+id/rbSmoothie01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Jahoda"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/rbSmoothie02"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ananas"/>
+
+        <RadioButton
+            android:id="@+id/rbSmoothie03"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Broskev"/>
+
+    </RadioGroup>
+
+    <CheckBox
+        android:id="@+id/cbFruit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ovoce navíc"/>
+
+    <CheckBox
+        android:id="@+id/cbMilk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mléko navíc"/>
+
+    <CheckBox
+        android:id="@+id/cbIce"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="S ledem"
+        android:layout_marginBottom="16sp"/>
+
+    <Button
+        android:id="@+id/btnOrder"
+        android:layout_width="wrap_content"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#852408"
+        android:paddingVertical="16sp"
+        android:paddingHorizontal="30sp"
+        android:text="Objednat smoothie"
+        android:layout_marginBottom="16sp"/>
+
+    <TextView
+        android:id="@+id/tvOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Souhrn objednávky:"
+        android:textSize="18sp"/>
+    
+    <ImageView
+        android:id="@+id/imgSmoothie"
+        android:layout_width="match_parent"
+        android:layout_height="200sp"
+        android:src="@drawable/strawberry_smoothie"
+        android:scaleType="centerInside"
+        android:padding="16dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -16,4 +101,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
