--- a/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
+++ b/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/twHeading"
-        android:text="Jaké smoothie si chcete objednat?"
+        android:text="Jaké smoothie si chcete objednat?" 
         android:textSize="22sp"
         android:textAlignment="center"
         android:layout_marginBottom="16sp"/>
@@ -29,6 +29,7 @@
             android:id="@+id/rbSmoothie01"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="8sp"
             android:text="Jahoda"
             android:checked="true"/>
 
@@ -36,12 +37,14 @@
             android:id="@+id/rbSmoothie02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="8sp"
             android:text="Ananas"/>
 
         <RadioButton
             android:id="@+id/rbSmoothie03"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="8sp"
             android:text="Broskev"/>
 
     </RadioGroup>
@@ -74,6 +77,7 @@
         android:backgroundTint="#852408"
         android:paddingVertical="16sp"
         android:paddingHorizontal="30sp"
+        android:textColor="#fff"
         android:text="Objednat smoothie"
         android:layout_marginBottom="16sp"/>
 
@@ -83,7 +87,7 @@
         android:layout_height="wrap_content"
         android:text="Souhrn objednávky:"
         android:textSize="18sp"/>
-    
+
     <ImageView
         android:id="@+id/imgSmoothie"
         android:layout_width="match_parent"
