--- a/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
+++ b/MyApp003_objednavka/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20sp"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
     <TextView
         android:layout_width="match_parent"
@@ -23,7 +24,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="16sp">
+        android:layout_marginBottom="16sp"
+        android:paddingHorizontal="30sp"
+        android:paddingVertical="16sp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:backgroundTint="#ffffff"
+        android:background="@drawable/card_style">
 
         <RadioButton
             android:id="@+id/rbSmoothie01"
@@ -49,24 +56,42 @@
 
     </RadioGroup>
 
-    <CheckBox
-        android:id="@+id/cbFruit"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ovoce navíc"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="24sp"
+        android:paddingVertical="14sp"
+        android:layout_marginBottom="14sp"
+        android:backgroundTint="#ffffff"
+        android:background="@drawable/card_style"
+        android:gravity="center">
 
-    <CheckBox
-        android:id="@+id/cbMilk"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mléko navíc"/>
+        <CheckBox
+            android:id="@+id/cbFruit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ovoce navíc"
+            android:layout_gravity="center"/>
 
-    <CheckBox
-        android:id="@+id/cbIce"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="S ledem"
-        android:layout_marginBottom="16sp"/>
+        <CheckBox
+            android:id="@+id/cbMilk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mléko navíc"
+            android:layout_gravity="center"/>
+
+        <CheckBox
+            android:id="@+id/cbIce"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="S ledem"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/btnOrder"
@@ -74,10 +99,10 @@
         android:textAlignment="center"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:backgroundTint="#852408"
+        android:backgroundTint="#ffffff"
         android:paddingVertical="16sp"
         android:paddingHorizontal="30sp"
-        android:textColor="#fff"
+        android:textColor="#970101"
         android:text="Objednat smoothie"
         android:layout_marginBottom="16sp"/>
 
