--- a/MyApp005_MoreActivities/app/src/main/res/layout/activity_second.xml
+++ b/MyApp005_MoreActivities/app/src/main/res/layout/activity_second.xml
@@ -7,18 +7,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16sp"
-    tools:context=".MainActivity">
+    tools:context="SecondActivity">
 
-    <EditText
-        android:id="@+id/etNickname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Vyplňte přezdívku"/>
-
-    <Button
-        android:id="@+id/btnSecond"
+    <TextView
+        android:id="@+id/twInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Odeslat data"/>
+        android:text="druhá aktivita"/>
+
+    <Button
+        android:id="@+id/btnThird"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Třetí aktivita"/>
+
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Zavřít aktivitu"/>
 
 </LinearLayout>
