--- a/MyApp005_MoreActivities/app/src/main/res/layout/activity_third.xml
+++ b/MyApp005_MoreActivities/app/src/main/res/layout/activity_third.xml
@@ -2,24 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/second"
+    android:id="@+id/third"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16sp"
-    tools:context=".SecondActivity">
+    tools:context=".ThirdActivity">
 
     <TextView
         android:id="@+id/twInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="druhá aktivita"/>
-
-    <EditText
-        android:id="@+id/etSecNick"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Vyplňte další přezdívku"/>
+        android:text="Třetí aktivita"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,18 +22,18 @@
         android:layout_marginTop="20sp">
 
         <Button
-        android:id="@+id/btnThird"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Třetí aktivita"
+            android:id="@+id/btnPrevious"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Předchozí aktivita"
             android:layout_weight="1"
             android:layout_marginRight="10sp"/>
 
         <Button
-        android:id="@+id/btnBack"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Zavřít aktivitu"
+            android:id="@+id/btnBack"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Zavřít aktivitu"
             android:layout_weight="1"
             android:layout_marginLeft="10sp"
             android:backgroundTint="#900B0B"/>
