--- a/MyApp012aJednoduchaMatematika/app/src/main/res/layout/activity_main.xml
+++ b/MyApp012aJednoduchaMatematika/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,11 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button0"
-        android:layout_width="140dp"
-        android:layout_height="105dp"
-        android:backgroundTint="#B5D8EF"
-        android:fontFamily="sans-serif-smallcaps"
-        android:onClick="optionSelect"
-        android:tag="0"
-        android:text="Button"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TimeTextView" />
-
-    <Button
         android:id="@+id/button1"
         android:layout_width="140dp"
         android:layout_height="105dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#DF165A"
         android:fontFamily="sans-serif-smallcaps"
         android:onClick="optionSelect"
@@ -33,9 +22,26 @@
         app:layout_constraintTop_toBottomOf="@+id/ScoreTextView" />
 
     <Button
+        android:id="@+id/button0"
+        android:layout_width="140dp"
+        android:layout_height="105dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="144dp"
+        android:backgroundTint="#03A9F4"
+        android:fontFamily="sans-serif-smallcaps"
+        android:onClick="optionSelect"
+        android:tag="0"
+        android:text="Button"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TimeTextView" />
+
+    <Button
         android:id="@+id/button2"
         android:layout_width="140dp"
         android:layout_height="105dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
         android:backgroundTint="#0E8C80"
         android:fontFamily="sans-serif-smallcaps"
         android:onClick="optionSelect"
@@ -49,6 +55,8 @@
         android:id="@+id/button3"
         android:layout_width="140dp"
         android:layout_height="105dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
         android:backgroundTint="#58B65D"
         android:fontFamily="sans-serif-smallcaps"
         android:onClick="optionSelect"
@@ -74,12 +82,13 @@
         android:id="@+id/QuestionTextText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginTop="80dp"
         android:padding="20dp"
         android:text="29 + 12"
         android:textColor="#322E2E"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@+id/ScoreTextView"
+        app:layout_constraintHorizontal_bias="0.418"
         app:layout_constraintStart_toEndOf="@+id/TimeTextView"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,7 +96,6 @@
         android:id="@+id/TimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:background="#FF9800"
         android:padding="10dp"
         android:text="30s"
@@ -100,8 +108,6 @@
         android:id="@+id/AlertTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-
         android:padding="20dp"
         android:text="Jdeme na to!"
         android:textColor="#555555"
