--- a/MyApp014aMyNoteHub/app/src/main/res/layout/item_note.xml
+++ b/MyApp014aMyNoteHub/app/src/main/res/layout/item_note.xml
@@ -10,9 +10,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:paddingVertical="10sp"
         android:paddingHorizontal="14sp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
         <TextView
             android:id="@+id/note_title"
@@ -22,6 +28,15 @@
             android:textColor="@color/primaryTextColor"
             android:textSize="18sp"
             android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/note_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Kategorie"
+                android:textColor="@color/secondaryTextColor"
+                android:textSize="12sp"
+                android:layout_marginTop="4dp" />
 
         <TextView
             android:id="@+id/note_content_preview"
@@ -34,10 +49,14 @@
             android:textSize="14sp"
             android:layout_marginTop="4dp" />
 
+    </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_weight="1"
+            android:layout_gravity="right">
             <!-- Ikonka pro editaci -->
             <ImageView
                 android:id="@+id/icon_edit"
