#7 game console fragments done

--- a/MyApp007a_FragmentsExample_01/app/src/main/res/values/colors.xml
+++ b/MyApp007a_FragmentsExample_01/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#f5f5f5</color>
+    <color name="red">#e4000f</color>
 </resources>
