--- a/MyApp007a_FragmentsExample_01/app/src/main/res/layout/activity_main.xml
+++ b/MyApp007a_FragmentsExample_01/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,108 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <TextView
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="16dp"
+        android:scaleType="fitCenter"
+        android:layout_gravity="center"
+        android:maxWidth="240dp"
+        android:adjustViewBounds="true"
+        android:src="@drawable/logo"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Text na úvodní obrazovce -->
+    <TextView
+        android:id="@+id/textViewIntro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vítejte v průvodci herních konzolí od společnosti Nintendo"
+        android:textSize="18sp"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:layout_marginBottom="20dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textViewIntro2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Vyberte konzoli:"
+        android:textSize="18sp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp" />
+
+    <!-- Tlačítka pro výběr fragmentu -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/btnConsole1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="NES" />
+
+        <Button
+            android:id="@+id/btnConsole2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="SNES"
+            android:layout_marginStart="8dp" />
+
+        <Button
+            android:id="@+id/btnConsole3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="N64"
+            android:layout_marginStart="8dp" />
+
+    </LinearLayout>
+
+    <!-- Tlačítka pro výběr fragmentu -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
+
+        <Button
+            android:id="@+id/btnConsole4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="Gamecube"
+            android:layout_marginStart="8dp" />
+
+        <Button
+            android:id="@+id/btnConsole5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/white"
+            android:text="Wii"
+            android:layout_marginStart="8dp" />
+
+    </LinearLayout>
+
+    <!-- Kontejner pro fragmenty -->
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+</LinearLayout>
